# cataloger-cli

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.run/: main.run.xml
cataloger_cli/apis/: api_endpoint.py  api_response.py  api_server.py
cataloger_cli/managers/: photo_manager.py  selenium_manager.py
cataloger_cli/services/: base_service.py
tests/: test_main.py  test_selenium_manager.py
