[tool.poetry]
name = "cataloger-cli"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cataloger_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.5.0"
selenium = "^4.9.0"
webdriver-manager = "^3.8.6"
pillow = "^9.5.0"
rich = "^13.3.5"
ffmpeg-python = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
